// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Password renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hdhjuc"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        medium
      </label>
      <div
        className="Inner-sc-1soq84i-0 xFnVc"
      >
        <input
          className="Input-qkdgvx-0 eDfdhf"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 hMNflX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hdhjuc"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        large
      </label>
      <div
        className="Inner-sc-1soq84i-0 xFnVc"
      >
        <input
          className="Input-qkdgvx-0 bTRHcM"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 hMNflX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hdhjuc"
      disabled={true}
    >
      <div
        className="Inner-sc-1soq84i-0 gXtJlV"
      >
        <input
          className="Input-qkdgvx-0 GGOhW"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 iEBjb"
        >
          xlarge
        </label>
        <div
          className="ShowPassword-sc-147a7th-0 hMNflX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        medium
      </label>
      <div
        className="Inner-sc-1soq84i-0 xFnVc"
      >
        <input
          className="Input-qkdgvx-0 kPcOEJ"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 hMNflX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 kjnrjC"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        large
      </label>
      <div
        className="Inner-sc-1soq84i-0 xFnVc"
      >
        <input
          className="Input-qkdgvx-0 fZegXW"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 hMNflX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 kjnrjC"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <div
        className="Inner-sc-1soq84i-0 gXtJlV"
      >
        <input
          className="Input-qkdgvx-0 dHfFNQ"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 iEBjb"
        >
          xlarge
        </label>
        <div
          className="ShowPassword-sc-147a7th-0 hMNflX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 kjnrjC"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        medium
      </label>
      <div
        className="Inner-sc-1soq84i-0 xFnVc"
      >
        <input
          className="Input-qkdgvx-0 eDfdhf"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 hMNflX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        large
      </label>
      <div
        className="Inner-sc-1soq84i-0 xFnVc"
      >
        <input
          className="Input-qkdgvx-0 bTRHcM"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 hMNflX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <div
        className="Inner-sc-1soq84i-0 gXtJlV"
      >
        <input
          className="Input-qkdgvx-0 GGOhW"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 iEBjb"
        >
          xlarge
        </label>
        <div
          className="ShowPassword-sc-147a7th-0 hMNflX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        medium
      </label>
      <div
        className="Inner-sc-1soq84i-0 xFnVc"
      >
        <input
          className="Input-qkdgvx-0 eDfdhf"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 hMNflX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        large
      </label>
      <div
        className="Inner-sc-1soq84i-0 xFnVc"
      >
        <input
          className="Input-qkdgvx-0 bTRHcM"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 hMNflX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <div
        className="Inner-sc-1soq84i-0 gXtJlV"
      >
        <input
          className="Input-qkdgvx-0 GGOhW"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 iEBjb"
        >
          xlarge
        </label>
        <div
          className="ShowPassword-sc-147a7th-0 hMNflX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        medium
      </label>
      <div
        className="Inner-sc-1soq84i-0 xFnVc"
      >
        <input
          className="Input-qkdgvx-0 eDfdhf"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 hMNflX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        large
      </label>
      <div
        className="Inner-sc-1soq84i-0 xFnVc"
      >
        <input
          className="Input-qkdgvx-0 bTRHcM"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 hMNflX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <div
        className="Inner-sc-1soq84i-0 gXtJlV"
      >
        <input
          className="Input-qkdgvx-0 GGOhW"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 iEBjb"
        >
          xlarge
        </label>
        <div
          className="ShowPassword-sc-147a7th-0 hMNflX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
        dir="rtl"
      >
        medium
      </label>
      <div
        className="Inner-sc-1soq84i-0 xFnVc"
      >
        <input
          className="Input-qkdgvx-0 eDfdhf"
          dir="rtl"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 bRmGtQ"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
        dir="rtl"
      >
        large
      </label>
      <div
        className="Inner-sc-1soq84i-0 xFnVc"
      >
        <input
          className="Input-qkdgvx-0 bTRHcM"
          dir="rtl"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 bRmGtQ"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <div
        className="Inner-sc-1soq84i-0 gXtJlV"
      >
        <input
          className="Input-qkdgvx-0 GGOhW"
          dir="rtl"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 crzJMw"
        >
          xlarge
        </label>
        <div
          className="ShowPassword-sc-147a7th-0 bRmGtQ"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <div
        className="Inner-sc-1soq84i-0 xFnVc"
      >
        <input
          className="Input-qkdgvx-0 eDfdhf"
          placeholder="medium"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 hMNflX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <div
        className="Inner-sc-1soq84i-0 xFnVc"
      >
        <input
          className="Input-qkdgvx-0 bTRHcM"
          placeholder="large"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 hMNflX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <div
        className="Inner-sc-1soq84i-0 gXtJlV"
      >
        <input
          className="Input-qkdgvx-0 gxGCUT"
          placeholder="xlarge"
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 iEBjb"
        />
        <div
          className="ShowPassword-sc-147a7th-0 hMNflX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        medium
      </label>
      <div
        className="Inner-sc-1soq84i-0 xFnVc"
      >
        <input
          className="Input-qkdgvx-0 jnsDpw"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 hMNflX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        large
      </label>
      <div
        className="Inner-sc-1soq84i-0 xFnVc"
      >
        <input
          className="Input-qkdgvx-0 fcaMlX"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 hMNflX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <div
        className="Inner-sc-1soq84i-0 fqEbYq"
      >
        <input
          className="Input-qkdgvx-0 GGOhW"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 iEBjb"
        >
          xlarge
        </label>
        <div
          className="ShowPassword-sc-147a7th-0 hMNflX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
